fix: correct auth endpoints with api context path